Improved stability and made website more pretty

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/modesta.css">
     <link rel="stylesheet" href="/static/custom.css">
   </head>
-  <body class="dark-theme github">
+  <body class="dark-theme tf2-secondary">
     {% block content %}{% endblock %}
   </body>
 </html>
