--- a/templates/onepage.html
+++ b/templates/onepage.html
@@ -3,7 +3,7 @@
 <meta http-equiv="refresh" content="5; url='https://verify.festive.world'" />
 <section class="container">
   <div class="box-container">
-    <h1>{{ title }}</h1>
+    <h1 class="tf2-primary">{{ title }}</h1>
     <p>{{ message }}</p>
   </div>
 </section>
