--- a/static/custom.css
+++ b/static/custom.css
@@ -1,10 +1,56 @@
+/* Fonts */
+@font-face {
+  font-family: "tf2-primary";
+  src: url("/static/TF2_Build.ttf");
+}
+
+@font-face {
+  font-family: "tf2-secondary";
+  src: url("/static/TF2_Secondary.ttf");
+}
+
+.tf2-primary {
+  font-family: "tf2-primary", sans-serif;
+  font-weight: normal;
+  letter-spacing: 1px;
+}
+
+.tf2-secondary {
+  font-family: "tf2-secondary", sans-serif;
+  font-weight: normal;
+}
+
+/* Custom shit */
 .top-info {
-  margin-top: 3em;
   margin-bottom: 2em;
+}
+
+.top-info-title {
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
 }
 
 .verify-submit-container {
   margin-top: 2em;
+}
+
+.me-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  filter: brightness(0.25);
+  background-size: cover;
+}
+
+.me-content {
+  z-index: 9999999999999999;
+}
+
+.card .card-inner:hover, .card-2 .card-inner-2:hover {
+  transform: translateZ(12px);
 }
 
 .me .title { font-size: 2rem; }
