--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <section class="container text-center">
   <div class="top-info">
-    <h1 class="sun-flower-text">Festive World: Discord verification</h1>
+    <h1 class="top-info-title sun-flower-text tf2-primary">Festive World: Discord verification</h1>
 
     <div class="buttons">
       <a href="https://discord.gg/NmKe2n4MvV" target="_blank" class="btn discord-dropshadow white-text">Discord server</a>
@@ -13,60 +13,73 @@
   </div>
 
   <div class="flex-grid">
-    <div class="col-xs-6">
+    <div class="col-xs-6 card">
       {% if discord %}
       <section class="me discord-dropshadow">
-        <h1 class="no-margin">Discord information</h1>
-        <div class="avatar-container">
-          <img draggable="false" src="https://cdn.discordapp.com/avatars/{{ discord.id }}/{{ discord.avatar }}.png"
-            class="image-title" />
-        </div>
-        <div class="unset">
-          <h1 class="title monospace">{{ discord }}</h1>
-          <p class="undertitle monospace">{{ discord.id }}</p>
+        <div class="me-background" style="background-image: url('https://cdn.discordapp.com/banners/{{ discord.id }}/{{ discord.banner }}.png?size=512')"></div>
+        <div class="me-content">
+          <div class="avatar-container">
+            <img draggable="false" src="https://cdn.discordapp.com/avatars/{{ discord.id }}/{{ discord.avatar }}.png"
+              class="image-title" />
+          </div>
+          <div class="unset">
+            <h1 class="title">{{ discord }}</h1>
+            <p class="undertitle">{{ discord.id }}</p>
+          </div>
         </div>
       </section>
       {% else %}
-      <a href="/login/discord" class="btn discord-dropshadow white-text">
-        Login with Discord
-      </a>
+      <section class="me discord-dropshadow">
+        <h1 class="title tf2-primary">Discord information</h1>
+        <p class="undertitle">Login with Discord to see your information</p>
+        <a href="/login/discord" class="btn emerald-dropshadow white-text">
+          Login with Discord
+        </a>
+      </section>
       {% endif %}
     </div>
 
     <div class="col-xs-6">
       {% if steam %}
       <section class="me steam-dropshadow">
-        <h1 class="no-margin">Steam information</h1>
-        <div class="avatar-container">
-          <img draggable="false" src="{{ steam.avatar }}" class="image-title" />
-        </div>
-        <div class="unset">
-          <h1 class="title monospace">{{ steam.name }}</h1>
-          <p class="undertitle monospace">
-            <a href="https://steamcommunity.com/profiles/{{ steam.commid }}" target="_blank" class="peter-river-text">
-              {{ steam.commid }}
-            </a>
-          </p>
+        <div class="me-background" style="background-image: url('{{ steam.background }}')"></div>
+        <div class="me-content">
+          <div class="avatar-container">
+            <img draggable="false" src="{{ steam.avatar }}" class="image-title" />
+          </div>
+          <div class="unset">
+            <h1 class="title">{{ steam.name }}</h1>
+            <p class="undertitle">
+              <a href="https://steamcommunity.com/profiles/{{ steam.commid }}" target="_blank" class="peter-river-text">
+                {{ steam.commid }}
+              </a>
+            </p>
+          </div>
         </div>
       </section>
       {% else %}
-      <a href="/login/steam">
-        <img src="/static/steam_login.png" alt="Steam Login" />
-      </a>
+      <section class="me steam-dropshadow">
+        <h1 class="title tf2-primary">Steam information</h1>
+        <p class="undertitle">Login with Steam to see your information</p>
+        <br>
+        <a href="/login/steam">
+          <img src="/static/steam_login.png" alt="Steam Login" />
+        </a>
+      </section>
       {% endif %}
     </div>
   </div>
 
   {% if verify_data %}
-  <div class="verify-submit-container box-container primary-dropshadow">
-    <h1 class="no-margin">Verification already done</h1>
+  <div class="verify-submit-container box-container primary-dropshadow card">
+    <h1 class="no-margin tf2-primary">Verification already done</h1>
     <p>
       You're already verified and have access to our Discord server. Enjoy your stay 💝
     </p>
   </div>
   {% elif steam and discord %}
   <div class="verify-submit-container box-container primary-dropshadow">
-    <h1 class="no-margin">Congratulations 🎉</h1>
+    <h1 class="no-margin tf2-primary">Congratulations 🎉</h1>
     <p>
       You have successfully verified your Discord and Steam account.<br>
       You can now click the button below to submit your information to the Discord server.<br>
