Changed font to button

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <div class="top-info">
     <h1 class="top-info-title sun-flower-text tf2-primary">Festive World: Discord verification</h1>
 
-    <div class="buttons">
+    <div class="buttons monospace">
       <a href="https://discord.gg/NmKe2n4MvV" target="_blank" class="btn discord-dropshadow white-text">Discord server</a>
       {% if discord or steam %}
         <a href="/logout" class="btn alizarin-dropshadow white-text">Logout</a>
@@ -32,7 +32,7 @@
       <section class="me discord-dropshadow">
         <h1 class="title tf2-primary">Discord information</h1>
         <p class="undertitle">Login with Discord to see your information</p>
-        <a href="/login/discord" class="btn emerald-dropshadow white-text">
+        <a href="/login/discord" class="btn emerald-dropshadow white-text monospace">
           Login with Discord
         </a>
       </section>
