--- a/static/custom.css
+++ b/static/custom.css
@@ -50,8 +50,14 @@
   width: 100%;
   height: 100%;
   z-index: 10;
-  filter: brightness(0.25);
+  filter: brightness(0.5);
   background-size: cover;
+}
+
+.me-background video {
+  height: 100%;
+  width: 100%;
+  object-fit: fill;
 }
 
 .me-content {
